Fix broken sample code in Authorize HttpServletRequests
Signed-off-by: Taeik Lim <sibera21@gmail.com>

--- a/docs/modules/ROOT/pages/servlet/authorization/authorize-http-requests.adoc
+++ b/docs/modules/ROOT/pages/servlet/authorization/authorize-http-requests.adoc
@@ -188,7 +188,7 @@ Java::
 SecurityFilterChain web(HttpSecurity http) throws Exception {
 	http
 		.authorizeHttpRequests((authorize) -> authorize
-			.requestMatchers("/endpoint").hasAuthority('USER')
+			.requestMatchers("/endpoint").hasAuthority("USER")
 			.anyRequest().authenticated()
 		)
         // ...
@@ -205,7 +205,7 @@ Kotlin::
 SecurityFilterChain web(HttpSecurity http) throws Exception {
 	http {
         authorizeHttpRequests {
-            authorize("/endpoint", hasAuthority('USER'))
+            authorize("/endpoint", hasAuthority("USER"))
             authorize(anyRequest, authenticated)
         }
 	}
